@startuml

entity Publisher {
  *id
  --
}

entity Subscriber {
  * id
  --
}

entity Subscription {
  * id
  --
  * publisher_id (FK:publisher(id))
  * subscriver_id (FK:subscriver(id))
  * start_date: date
    end_date: date
    plan_id (FK:plan(id))
}

entity Plan {
  * id
  --
  * publisher_id (FK:publisher(id))(UNIQUE:1)
  * name (UNIQUE:1)
  * cost: bigint
}

entity Payment {
  * id
  --
  * year: integer
  * month: integer
  * month_for_payment: integer
    payment_date: date
  * payment_status: (FK: payment_status(id))
  * account_id (FK:account(id))
}

entity Account {
  * id
  --
  * name
  * email
  * publisher_id (FK:publisher(id)
  * subscriber_id (FK:subscriber(id)
}

entity PaymentStatus {
  * id
  --
  * name
}

note right: 1:支払い未済\n2:支払い済

entity PlanStatus {
  * id
  --
  * name
}

note right: 1:公開\n2:非公開

entity CommissionMaster {
  from: date
  to: date
  commission_fee: decimal
}

note left: from から to までの手数料。publisher は、\nサブスクリプションの x % をシステムに支払う。

Publisher }o-|| Subscription
Subscription ||-o{ Subscriber
Subscription }o--|| Plan
PaymentStatus ||--o{ Payment

Account }o--|| Publisher
Account }o--|| Subscriber

Payment }o--|| Account

Plan ||--|{ PlanStatus

@enduml

